<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/act_bg"
    android:orientation="vertical" >

		<LinearLayout
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:layout_height="match_parent">
			<View
				android:id="@+id/top_menu_view_1"
				android:layout_width="match_parent"
				android:layout_height="20dp"
				android:background="@color/act_bg"/>
		<RelativeLayout
			android:id="@+id/layout_navbar"
			style="@style/navbar" >

			<TextView
				android:id="@+id/text_register"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="12dp"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:textSize="20sp"
				android:text="@string/register"
				android:onClick="onClick_register"
				android:textColor="@color/btn_text"/>
		</RelativeLayout>
		<LinearLayout

			android:layout_width="match_parent"
			android:orientation="vertical"
			android:layout_marginRight="6dp"
			android:layout_marginLeft="6dp"
			android:background="@drawable/bg_login"
			android:layout_height="match_parent">



			<LinearLayout android:id="@+id/layout_content"
				android:layout_below="@+id/layout_navbar"
				android:orientation="vertical"
				android:layout_marginTop="24dp"
				android:layout_marginLeft="12dp"
				android:layout_marginRight="12dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="22dip">
					<EditText android:id="@+id/username"
						android:hint="@string/hint_userphone"
						android:paddingRight="10dip"
						android:paddingLeft="80dip"
						android:inputType="phone"
						android:digits="0123456789"
						style="@style/input_fullline"/>
					<TextView style="@style/label"
						android:text="@string/phone"
						android:paddingLeft="15dip"
						android:layout_alignBaseline="@+id/username"/>
				</RelativeLayout>
				<View
					android:layout_width="match_parent"
					android:background="#e5e5e5"
					android:layout_marginLeft="10dp"
					android:layout_height="1dp">

				</View>
				<RelativeLayout android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<EditText android:id="@+id/password"
						android:hint="@string/hint_password"
						android:paddingRight="10dip"
						android:paddingLeft="80dip"
						android:inputType="numberPassword"
						android:digits="0123456789"
						android:maxLength="6"
						style="@style/input_fullline"/>
					<TextView style="@style/label"
						android:text="@string/password"
						android:paddingLeft="15dip"
						android:layout_alignBaseline="@+id/password"/>
				</RelativeLayout>
				<View
					android:layout_width="match_parent"
					android:background="#e5e5e5"
					android:layout_marginLeft="10dp"
					android:layout_height="1dp">

				</View>
				<TextView
					android:id="@+id/text_forget_password"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="18dp"
					android:layout_marginRight="16dp"
					android:layout_gravity="right"
					android:text="@string/forget_password"
					android:textSize="16sp"
					android:textColor="@color/text_hint_miss"
					/>

			</LinearLayout>

			<Button
				style="@style/btn"
				android:id="@+id/login"
				android:layout_below="@+id/layout_content"
				android:onClick="onClick_login"
				android:layout_marginTop="45dp"
				android:layout_marginLeft="24dp"
				android:layout_marginRight="24dp"
				android:text="@string/login"
				android:textColor="@color/btn_text"
				android:textSize="18sp"
				/>

			<include layout="@layout/loading" />
		</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<View
				android:visibility="gone"
				android:id="@+id/top_menu_view_2"
				android:layout_width="match_parent"
				android:layout_height="20dp"
				android:background="@color/act_bg"/>
			<ImageView
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="12dp"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:src="@mipmap/cantact_us"/>
		</LinearLayout>



</FrameLayout>