<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_navbar"
        android:visibility="gone"
        style="@style/navbar" >

        <TextView
            style="@style/title"
            android:text="忘记密码" />

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/login_return_button_selected" />
    </RelativeLayout>
    <include layout="@layout/top_title_style"></include>
    <View
        android:layout_width="match_parent"
        android:background="#f5f5f5"
        android:layout_marginLeft="1dp"
        android:layout_height="6dp">

    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/user_phone"
                style="@style/input_fullline"
                android:digits="0123456789"
                android:hint="@string/hint_userphone"
                android:maxLength="11"
                android:inputType="phone"
                android:paddingLeft="80dip"
                android:paddingRight="10dip" />

            <TextView
                style="@style/label"
                android:layout_alignBaseline="@+id/user_phone"
                android:paddingLeft="15dip"
                android:text="@string/phone" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:background="#e5e5e5"
            android:layout_marginLeft="1dp"
            android:layout_height="1dp">

        </View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/verification"
                style="@style/input_fullline"
                android:paddingLeft="80dip"
                android:paddingRight="10dip"
                android:hint="@string/hint_verification_code" />
            <TextView
                style="@style/label"
                android:layout_alignBaseline="@+id/verification"
                android:paddingLeft="15dip"
                android:text="@string/code" />

            <TextView
                android:id="@+id/text_verification"
                android:layout_width="72dp"
                android:layout_height="36dp"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="17dip"
                android:background="@drawable/btn_getcode"
                android:clickable="true"
                android:text="@string/get_verification"
                android:textColor="@color/btn_text"
                android:textSize="16sp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:background="#f5f5f5"
            android:layout_marginLeft="1dp"
            android:layout_height="8dp">

        </View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/password"
                style="@style/input_fullline"
                android:digits="0123456789"
                android:hint="@string/hint_password_details"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:paddingLeft="80dip"
                android:paddingRight="10dip" />

            <TextView
                style="@style/label"
                android:layout_alignBaseline="@+id/password"
                android:paddingLeft="15dip"
                android:text="@string/newpassword" />

            <CheckBox
                android:id="@+id/checkBox_show_passward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="36dip"
                android:background="@null"
                android:visibility="gone"
                android:button="@drawable/btn_check"
                android:checked="false" />
            <!--
                 <ImageView 
	            android:id="@+id/image_show_passward"
	            android:layout_width="wrap_content"
         		android:layout_height="wrap_content"
         		android:src="@drawable/login_remember_passwords_icon_pre"
         		android:layout_centerVertical="true"
         		android:layout_alignParentRight="true"
	            android:layout_marginRight="17dip"/>
            -->
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#f5f5f5"
        android:layout_marginLeft="1dp"
        android:layout_height="8dp">

    </View>

    <TextView
        android:id="@+id/Phonecode_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_code_hint"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="6dp"
        android:textColor="#666666"
        android:visibility="gone"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="42dip"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="24dip"
        android:layout_marginRight="24dip"
        android:layout_marginTop="42dp"
        android:enabled="false"
        android:background="@drawable/btn_yuyue_none"
        android:text="@string/next"
        android:textColor="@color/btn_text"
        android:textSize="18sp" />

</LinearLayout>