<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/root_layout" >
    <RelativeLayout
		android:visibility="gone"
		android:id="@+id/layout_navbar"
		style="@style/navbar" >
        <TextView style="@style/title"
			android:text="@string/my_change_password" />
        <ImageView 
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
         	android:layout_height="match_parent"
         	android:layout_alignParentLeft="true"
         	android:paddingLeft="15dp"
         	android:paddingRight="15dp"
         	android:layout_centerVertical="true"
         	android:src="@drawable/login_return_button_selected"/>
    </RelativeLayout>
	<include layout="@layout/top_title_style"></include>
	<View
		android:layout_width="match_parent"
		android:layout_height="6dp"
		android:background="#f5f5f5"></View>
    <LinearLayout android:id="@+id/layout_content"
        android:layout_below="@+id/layout_navbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
	    <RelativeLayout
			android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        >
	        <EditText android:id="@+id/edit_old_password"
	            android:hint="@string/my_password_detail_old"
		        android:paddingRight="10dip"
		        android:paddingLeft="80dip"	
		        android:inputType="numberPassword"
		        android:digits="0123456789"
		        android:maxLength="6"
		        style="@style/input_fullline"/>
	        <TextView style="@style/label" 
	            android:text="@string/my_old_password"
	            android:paddingLeft="15dip"
	            android:layout_alignBaseline="@+id/edit_old_password"/>
	        <CheckBox
	            android:id="@+id/checkBox_show_old_passward"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
         		android:layout_alignParentRight="true"
	            android:layout_marginRight="17dip"
	            android:background="@null"
	            android:button="@drawable/btn_check"
	            android:checked="false"/>
	    </RelativeLayout>
		<View
			android:layout_width="match_parent"
			android:layout_height="6dp"
			android:background="#f5f5f5"></View>
	    <RelativeLayout
			android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	        <EditText android:id="@+id/edit_new_password"
	            android:hint="@string/my_password_detail_new"
		        android:paddingRight="10dip"
		        android:paddingLeft="80dip"	
		        android:inputType="numberPassword"
		        android:digits="0123456789"
		        android:maxLength="6"
		        style="@style/input_fullline"/>
	        <TextView style="@style/label" 
	            android:text="@string/my_new_password"
	            android:paddingLeft="15dip"
	            android:layout_alignBaseline="@+id/edit_new_password"/>
	        <CheckBox
	            android:id="@+id/checkBox_show_new_passward"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
         		android:layout_alignParentRight="true"
	            android:layout_marginRight="17dip"
	            android:background="@null"
	            android:button="@drawable/btn_check"
	            android:checked="false"/>
	    </RelativeLayout>
	    
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="6dp"
		android:background="#f5f5f5"></View>
    <Button
         android:id="@+id/buttonSubmit"
         android:layout_below="@+id/layout_content"
         android:onClick="onClick_login"
         android:layout_width="match_parent"
         android:layout_height="42dip"
         android:layout_marginTop="30dip"
         android:layout_marginBottom="7dip"
         android:layout_marginLeft="18dip"
         android:layout_marginRight="18dip"
         android:background="@drawable/btn_yuyue"
         android:text="@string/submit"
         android:textColor="@color/btn_text"
         android:textSize="18sp" 
         />

    <include layout="@layout/loading" />
</LinearLayout>